Prevent style spilling to other files

--- a/src/components/general/modal.scss
+++ b/src/components/general/modal.scss
@@ -2,7 +2,7 @@
 @import 'node_modules/bootstrap/scss/functions';
 @import 'node_modules/bootstrap/scss/variables';
 @import 'node_modules/bootstrap/scss/mixins/_breakpoints';
-.modal {
+.modal-contact {
 	.modal-content {
 		// background: white;
 		// background: $gradient-navy;
